<resources>
    <string name="app_name">DIGI-AGRO</string>
    <string name="navigation_drawer_close">close Navigation dawer</string>
    <string name="navigation_drawer_open">open Navigation dawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="pt">.</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multi">x</string>
    <string name="clear">C</string>
    <string name="plusMinus">+/-</string>
    <string name="exponent">^</string>
    <string name="parenthesis">( )</string>
    <string name="div">/</string>
    <string name="backspace"></string>
    <string name="display"></string>
    <string name="add_crop">Add Crop</string>
    <string name="view_list">View List</string>
    <string name="amount_of_sold">Amount of sold</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="crop">Crop</string>
    <string name="year_of_sold">Year of sold</string>
    <string name="quantity">Quantity</string>
    <string name="enter_data">Enter Data</string>


</resources>